--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -5,8 +5,14 @@
 }
 
 html {
-  background-color: rgb(0, 26, 26);
+  background-repeat: no-repeat;
+  background-image: linear-gradient(to bottom, rgb(0, 26, 26), rgba(0, 26, 26, 0.952));
   scroll-behavior: smooth;
+}
+
+#root {
+  height: 100%;
+  height: 100vh;
 }
 
 body {
@@ -85,4 +91,13 @@ header ul input {
 }
 header ul input:focus {
   background-image: none;
+}
+
+main {
+  margin: 0 auto;
+  background-color: wheat;
+  margin-top: 1rem;
+  height: fit-content;
+  max-width: 1300px;
+  width: 100%;
 }
