--- a/client/public/scss/_base.scss
+++ b/client/public/scss/_base.scss
@@ -5,8 +5,14 @@
   }
   
   html {
-    background-color: rgb(0, 26, 26);
+    background-repeat: no-repeat;
+    background-image: linear-gradient(to bottom, rgb(0, 26, 26), rgba(0, 26, 26, 0.952)) ;
     scroll-behavior: smooth;
+  }
+
+  #root {
+    height: 100%;
+    height: 100vh;
   }
   
   body {
