--- a/client/public/scss/style.css
+++ b/client/public/scss/style.css
@@ -5,7 +5,9 @@
 }
 
 html {
-  background-color: rgb(0, 26, 26);
+  height: 100%;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(to bottom, rgb(0, 26, 26), rgba(0, 26, 26, 0.952));
   scroll-behavior: smooth;
 }
 
