--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -78,8 +78,15 @@ header ul li {
   padding: 0.3rem;
 }
 header ul li:hover {
+  transition: 0.12;
   background: rgba(255, 255, 169, 0.075);
   border-radius: 0.3rem;
+}
+header ul img {
+  transition: 1s;
+}
+header ul img:hover {
+  transform: rotate(360deg);
 }
 header ul input {
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/55/Magnifying_glass_icon.svg");
