--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -100,6 +100,10 @@ header ul input:focus {
   background-image: none;
 }
 
+.posts {
+  background-color: white;
+}
+
 main {
   margin: 0 auto;
   background-color: wheat;
