changed the way posts are created and added some styling

--- a/client/public/scss/_main.scss
+++ b/client/public/scss/_main.scss
@@ -1,3 +1,15 @@
 .posts {
     background-color: white;
 }
+
+.postProfile {
+    display: flex;
+}
+
+.postProfile p {
+    margin: 0 1rem;
+}
+
+.postProfile a {
+    color: purple;
+}
