--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -104,13 +104,30 @@ header ul input:focus {
   background-color: white;
 }
 
+.postProfile {
+  display: flex;
+}
+
+.postProfile p {
+  margin: 0 1rem;
+}
+
+.postProfile a {
+  color: purple;
+}
+
 main {
   margin: 0 auto;
-  background-color: wheat;
   margin-top: 1rem;
   height: fit-content;
   max-width: 1300px;
   width: 100%;
+}
+
+.bg {
+  background-color: wheat;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
 }
 
 .loader {
@@ -155,4 +172,24 @@ main {
   margin: 1rem;
   width: max-content;
   padding: 0.3rem;
+}
+
+.createPost {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.createPost button {
+  width: fit-content;
+  background-color: white;
+  padding: 0.3rem;
+  border-radius: 3rem;
+}
+.createPost textarea {
+  padding: 0.3rem;
+  max-width: 600px;
+  min-width: 350px;
+  height: fit-content;
+  word-wrap: break-word;
+  margin: 0.5rem 0;
 }
