--- a/client/public/scss/_body.scss
+++ b/client/public/scss/_body.scss
@@ -1,10 +1,15 @@
 main {
     margin: 0 auto;
-    background-color: wheat;
     margin-top: 1rem;
     height: fit-content;
     max-width: 1300px;
     width: 100%;
+}
+
+.bg {
+  background-color: wheat;
+  border-radius: .5rem;
+  padding: .5rem;
 }
 
 .loader {
