--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -128,6 +128,7 @@ main {
   background-color: wheat;
   border-radius: 0.5rem;
   padding: 0.5rem;
+  margin: 0.5rem 0;
 }
 
 .loader {
@@ -192,4 +193,11 @@ main {
   height: fit-content;
   word-wrap: break-word;
   margin: 0.5rem 0;
+}
+
+.myProfile {
+  display: flex;
+}
+.myProfile h1 {
+  font-size: 2rem;
 }
