--- a/client/public/scss/_navbar.scss
+++ b/client/public/scss/_navbar.scss
@@ -1,5 +1,9 @@
 header {
-    height: 7vh;
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    height: fit-content;
+    max-height: 10vh;
     background-color: rgb(0, 59, 59);
     width: 100%;
     color: rgb(255, 255, 169);
@@ -45,5 +49,27 @@ header {
             padding: .1rem;
             border-radius: 2rem;
         }  
+        .searchSmall {
+            position: absolute;
+            left: 75px;
+            height: 60px;
+            width: 60px;
+            background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/55/Magnifying_glass_icon.svg");
+            background-size: 30px;
+            background-repeat: no-repeat;
+            background-position: 15px;
+        }
     }   
+}
+
+@media screen and (width <= 850px) {
+    header ul {
+        justify-content: end;
+    }
+
+    .logo {
+        position: absolute;
+        left: 0;
+    }
+
 }
