--- a/client/public/scss/_me.scss
+++ b/client/public/scss/_me.scss
@@ -24,4 +24,15 @@
     h1 {
         font-size: 2rem;
     }
+
+    ul {
+        display: flex;
+    }
+
+}
+
+.meNav {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: white;
 }
