--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -137,12 +137,16 @@ header ul .searchSmall {
     left: 0;
   }
 }
-.posts {
-  background-color: white;
-}
-
 .postProfile {
   display: flex;
+}
+.postProfile img {
+  max-height: 75px;
+  height: 100%;
+  border-radius: 100%;
+}
+.postProfile p {
+  font-size: 1.4rem;
 }
 
 .postProfile p {
@@ -158,11 +162,25 @@ textarea {
   background-color: antiquewhite;
 }
 
+.postContent {
+  background-color: white;
+  margin: 1rem 0;
+  border: 1px solid black;
+  box-shadow: 3px 3px 3px 0px black;
+}
+.comment {
+  padding: 0.5rem;
+  border-top: 1px solid black;
+}
+.comment p {
+  padding: 0.1rem;
+}
+
 main {
   margin: 0 auto;
   margin-top: 1rem;
   height: fit-content;
-  max-width: 1300px;
+  max-width: 800px;
   width: 100%;
 }
 
@@ -239,6 +257,11 @@ main {
 
 .myProfile {
   display: flex;
+}
+.myProfile img {
+  border-radius: 50%;
+  max-height: 100px;
+  height: 100%;
 }
 .myProfile h1 {
   font-size: 2rem;
