added ability to upload profile  photo and fixed bug with displaying new comment after created

--- a/client/public/scss/_base.scss
+++ b/client/public/scss/_base.scss
@@ -13,7 +13,7 @@
     position: fixed;
     left: 0;right: 0;bottom: 0;top: 0;
     background-repeat: no-repeat;
-    background-image: linear-gradient(to bottom, rgb(0, 26, 26), rgba(0, 26, 26, 0.952));
+    background-image: linear-gradient(to bottom, rgb(173, 189, 177), rgb(58, 65, 60));
     height: 100vh;
   }
 
