--- a/client/public/scss/_body.scss
+++ b/client/public/scss/_body.scss
@@ -7,7 +7,8 @@ main {
 }
 
 .bg {
-  background-color: wheat;
+  background-color: rgb(233, 233, 233);
+  box-shadow: 3px 3px 7px 3px;
   border-radius: .5rem;
   padding: .5rem;
   margin: .5rem 0;
