--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -16,7 +16,7 @@ html {
   bottom: 0;
   top: 0;
   background-repeat: no-repeat;
-  background-image: linear-gradient(to bottom, rgb(0, 26, 26), rgba(0, 26, 26, 0.952));
+  background-image: linear-gradient(to bottom, rgb(173, 189, 177), rgb(58, 65, 60));
   height: 100vh;
 }
 
@@ -76,7 +76,7 @@ header {
   top: 0;
   height: fit-content;
   max-height: 10vh;
-  background-color: rgb(0, 59, 59);
+  background-color: rgb(191, 204, 195);
   width: 100%;
   color: rgb(255, 255, 169);
   display: flex;
@@ -97,7 +97,7 @@ header ul li {
 }
 header ul li:hover {
   transition: 0.12;
-  background-image: radial-gradient(circle closest-side, rgba(255, 255, 169, 0.411), rgba(0, 0, 0, 0));
+  background-image: radial-gradient(circle closest-side, #16D992, rgba(0, 0, 0, 0));
   border-radius: 0.3rem;
 }
 header ul li .navLinks {
@@ -185,7 +185,8 @@ main {
 }
 
 .bg {
-  background-color: wheat;
+  background-color: rgb(233, 233, 233);
+  box-shadow: 3px 3px 7px 3px;
   border-radius: 0.5rem;
   padding: 0.5rem;
   margin: 0.5rem 0;
@@ -273,5 +274,10 @@ main {
 .meNav {
   display: flex;
   justify-content: space-evenly;
+  width: 100%;
+  max-width: 1000px;
   background-color: white;
+}
+.meNav li {
+  margin: 0.2rem;
 }
