--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -294,20 +294,6 @@ main {
   flex-direction: column;
   align-items: start;
 }
-.createPost button {
-  width: fit-content;
-  background-color: white;
-  padding: 0.3rem;
-  border-radius: 3rem;
-}
-.createPost textarea {
-  padding: 0.3rem;
-  max-width: 600px;
-  min-width: 350px;
-  height: fit-content;
-  word-wrap: break-word;
-  margin: 0.5rem 0;
-}
 
 .myProfile {
   display: flex;
@@ -350,4 +336,59 @@ main {
 }
 .user-name div p {
   margin: 0 1rem;
+}
+
+.settings-aside {
+  display: flex;
+  justify-content: space-between;
+}
+
+.settings-nav {
+  height: fit-content;
+  width: 37%;
+  margin-right: 1rem;
+}
+.settings-nav ul li {
+  font-size: 1.2rem;
+  text-decoration: underline;
+  margin: 0.5rem;
+}
+
+.settings-return-element {
+  width: 63%;
+}
+
+.settings-head {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.settings-delete {
+  background-color: rgba(255, 0, 0, 0.4);
+}
+
+.setting-head {
+  margin: 0.7rem;
+  font-size: 1.5rem;
+}
+
+.setting-sub-head {
+  margin: 0.5rem 1rem;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+}
+
+.setting-text {
+  font-size: 1.2rem;
+}
+
+.setting-bold {
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+.setting-textarea {
+  display: flex;
+  margin: auto;
 }
