--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -407,3 +407,19 @@ main {
   display: flex;
   margin: auto;
 }
+
+.settings-link {
+  margin-right: 0;
+  height: 65px;
+  transition: 0.12s;
+  padding: 0.3rem;
+  text-decoration: none;
+}
+.settings-link:hover {
+  transition: 0.12;
+  background-image: radial-gradient(circle closest-side, #16d992, rgba(0, 0, 0, 0));
+  border-radius: 0.3rem;
+}
+.settings-link:visited {
+  color: rgb(255, 255, 169);
+}
