--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -74,8 +74,7 @@ header {
   z-index: 1000;
   position: fixed;
   top: 0;
-  height: fit-content;
-  max-height: 10vh;
+  height: min-content;
   background-color: rgb(191, 204, 195);
   width: 100%;
   color: rgb(255, 255, 169);
@@ -83,6 +82,7 @@ header {
   margin: auto;
 }
 header ul {
+  height: 100%;
   max-width: 1250px;
   width: 100%;
   margin: auto;
@@ -118,7 +118,6 @@ header ul input:focus {
   background-image: none;
 }
 header ul .searchSmall {
-  position: absolute;
   left: 75px;
   height: 60px;
   width: 60px;
