--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -477,3 +477,54 @@ main {
 .settings-link:visited {
   color: rgb(255, 255, 169);
 }
+
+.searchFix {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  align-items: center;
+}
+
+.searchTextArea {
+  display: flex;
+  justify-content: center;
+}
+.searchTextArea textarea {
+  margin-top: 12vh;
+  background-color: white;
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/55/Magnifying_glass_icon.svg");
+  background-size: 13px;
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  padding: 0.1rem;
+  border-radius: 2rem;
+  width: 350px;
+  height: 2rem;
+}
+.searchTextArea textarea:focus {
+  background-image: none;
+}
+
+.searchPageResultsBg {
+  z-index: 1001;
+  position: fixed;
+  height: 100%;
+  left: 0;
+  right: 0;
+  top: 16vh;
+  text-align: center;
+  margin: auto;
+}
+
+.searchPageResults {
+  top: 22vh;
+}
+
+@media screen and (width <= 400px) {
+  textarea {
+    width: 10vw;
+  }
+}
